Game Box Created

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="StyleSheet" href="style.css">
         <title>Tic Tac Toe</title>
     </head>
     <body>
-
+        <nav>
+            <ul>
+                <li>Tic-Tac-Toe</li>
+            </ul>
+        </nav>
+        <div class="GameContainer">
+            <div class="container">
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+            </div>
+            <div class="Info">
+                <h1>Welcom In The Game</h1>
+                <button id="reset">Reset</button>
+            </div>
+            <div class="ImageBox">
+                <img src="win.gif" alt="Winner">
+            </div>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
