--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
                 <div class="box"><span class="boxtext"></span></div>
             </div>
             <div class="Info">
-                <h1>Welcom In The Game</h1>
-                <button id="reset">Reset</button>
+                <h1>Welcome In The Game</h1>
+                <div>
+                    <span class="TurnInfo">Turn for X</span>
+                    <button id="reset">Reset</button>
+                </div>
             </div>
             <div class="ImageBox">
+
                 <img src="win.gif" alt="Winner">
             </div>
         </div>
