Tic Tac Toe Game Creation Complete

--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
                 <h1>Welcome In The Game</h1>
                 <div>
                     <span class="TurnInfo">Turn for X</span>
-                    <button id="reset">Reset</button>
+                    <button class="Reset">Reset</button>
                 </div>
-            </div>
-            <div class="ImageBox">
-
-                <img src="win.gif" alt="Winner">
+                <div class="ImageBox">
+                    <img src="resources/win.gif" alt="Winner" />
+                </div>
             </div>
         </div>
         <script src="script.js"></script>
